--- a/src/app/country/country-card/country-card.component.html
+++ b/src/app/country/country-card/country-card.component.html
@@ -5,23 +5,6 @@
     <h3 class="headermessage">World Counties</h3>
   </div>
 
-  <!-- <div class="row">
-    <div *ngFor="let country of countries" class="image-block col-sm-4">
-      <div
-        class="image-block clickable"
-        [ngStyle]="{
-          'background-image': 'url(' + country.flag + ')',
-          'background-repeat': 'no-repeat',
-          'background-position': 'center',
-          'background-size': 'cover'
-        }"
-        (click)="onCountryClick(country)">
-        <p>{{ country.name }}</p>
-      </div>
-    </div>
-  </div> -->
-
-
   <div class="row">
     <div *ngFor="let country of countries" class="image-block col-sm-4">
       <div class="flip-card">
@@ -34,8 +17,7 @@
           'background-repeat': 'no-repeat',
           'background-position': 'center',
           'background-size': 'cover'
-        }"
-        (click)="onCountryClick(country)">
+        }">
         <p>{{ country.name }}</p>
       </div>
     </div>
@@ -51,12 +33,25 @@
   </div>
 </div>
 
+<footer class="footer">
+  <div class="container">
+    <p>Developed by <strong>Livhuwani Rambuda</strong></p>
+    <p>Contact: <a href="mailto:livhuwanir@llrcorp.co.za">livhuwanir&#64;llrcorp.co.za</a> | Phone: +27 72 665 2009</p>
+    <p>
+      Follow:
+      <a href="https://github.com/mulaladigitalsolutions/CountryApp.git" target="_blank">GitHub</a> |
+      <a href="https://www.linkedin.com/in/livhuwani-rambuda-36143890/" target="_blank">LinkedIn</a>
+    </p>
+    <p>&copy; <span id="year"></span>LLR Corporations SA. All Rights Reserved.</p>
+  </div>
+</footer>
+
 <style>
 .headermessage {
   margin: 19px;
   color: black;
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 36px;
   font-weight: bold;
 }
 .image-block {
