--- a/src/app/country/country-card/country-card.component.html
+++ b/src/app/country/country-card/country-card.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
   <div class="row text-center">
-    <h3 class="headermessage">World Counties</h3>
+    <h3 class="headermessage">Flag Explorer App</h3>
   </div>
 
   <div class="row">
